<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:fontFamily="@font/merriweather"
        android:textColor="@color/charcoal"
        android:textStyle="bold"
        android:text="@string/book_title_label"/>

    <EditText
        android:id="@+id/book_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/merriweather"
        android:textColor="@color/charcoal"
        android:backgroundTint="@color/charcoal"
        android:textColorHint="@color/charcoal"
        android:hint="@string/book_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/charcoal"
        android:fontFamily="@font/merriweather"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textStyle="bold"
        android:text="@string/book_author_label"/>
    <EditText
        android:id="@+id/book_author"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/merriweather"
        android:hint="@string/book_author_hint"
        android:textColor="@color/charcoal"
        android:backgroundTint="@color/charcoal"
        android:textColorHint="@color/charcoal"
        android:importantForAutofill="no"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/merriweather"
        android:textColor="@color/charcoal"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textStyle="bold"
        android:text="@string/book_page_total_label"/>
    <EditText
        android:id="@+id/book_total_pages"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/charcoal"
        android:fontFamily="@font/merriweather"
        android:hint="@string/book_page_total_hint"
        android:backgroundTint="@color/charcoal"
        android:textColorHint="@color/charcoal"
        android:importantForAutofill="no"
        android:inputType="number"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center">

        <Button
            android:id="@+id/book_add_cancel_button"
            android:layout_width="144dp"
            android:layout_height="72dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="#a9a9a9"
            android:fontFamily="@font/merriweather"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/cancel_button_text"/>

        <Button
            android:id="@+id/book_add_save_button"
            android:layout_width="144dp"
            android:layout_height="72dp"
            android:layout_marginStart="24dp"
            android:backgroundTint="@color/secondary"
            android:textColor="@color/primary"
            android:fontFamily="@font/merriweather"
            android:textStyle="bold"
            android:text="@string/save_button_text"/>






    </LinearLayout>


</LinearLayout>